# app/docs/swagger.json
@@ -109,6 +109,38 @@
                     }
                 }
             }
+        },
+        "/users": {
+            "get": {
+                "description": "全てのユーザーのID・名前をリストで取得する",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User"
+                ],
+                "summary": "全ユーザーを取得する",
+                "responses": {
+                    "200": {
+                        "description": "登録されたユーザーの情報",
+                        "schema": {
+                            "$ref": "#/definitions/presenter.SuccessResponse-array_user_GetUsersResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "不正なリクエスト",
+                        "schema": {
+                            "$ref": "#/definitions/presenter.FailureResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "内部サーバーエラー",
+                        "schema": {
+                            "$ref": "#/definitions/presenter.FailureResponse"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -125,6 +157,20 @@
             "properties": {
                 "message": {
                     "type": "string"
+                },
+                "status": {
+                    "type": "integer"
+                }
+            }
+        },
+        "presenter.SuccessResponse-array_user_GetUsersResponse": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/user.GetUsersResponse"
+                    }
                 },
                 "status": {
                     "type": "integer"
@@ -153,6 +199,17 @@
                 }
             }
         },
+        "user.GetUsersResponse": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
         "user.PostUserRequest": {
             "type": "object",
             "required": [
@@ -174,10 +231,6 @@
         },
         "user.PostUserResponse": {
             "type": "object",
-            "required": [
-                "email",
-                "name"
-            ],
             "properties": {
                 "email": {
                     "type": "string"
