# app/infrastructure/router/mux_user.go
@@ -11,10 +11,14 @@ import (
 
 func handleUser(mux *http.ServeMux) {
 	userRepository := repository.NewUserRepository()
+
 	mux.Handle("POST /user", userHandler.NewPostUserHandler(userUsecase.NewRegisterUsecase(
 		userRepository, user.NewUserDomainService(userRepository),
 	)))
 	mux.Handle("DELETE /user/{id}", userHandler.NewDeleteUserHandler(userUsecase.NewUnregisterUsecase(
+		userRepository,
+	)))
+	mux.Handle("GET /users", userHandler.NewGetUsersHandler(userUsecase.NewListUsersUsecase(
 		userRepository,
 	)))
 }
